fixed overflows

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,10 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
-  /* prevent horizontal overflow when vertical scrollbar is present*/
-  max-width : 100%;
+  width: 100%;
+  height: 100%;
   font-family: "Helvetica Neue", Arial, sans-serif;
+  overflow: hidden;
 }
 
 :focus {
